--- a/rhizome-js/package.json
+++ b/rhizome-js/package.json
@@ -17,6 +17,7 @@
     "@tiptap/extension-underline": "^2.2.2",
     "@tiptap/react": "^2.2.2",
     "@tiptap/starter-kit": "^2.2.2",
+    "emoji-picker-react": "^4.7.12",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
