--- a/rhizome-js/package.json
+++ b/rhizome-js/package.json
@@ -20,7 +20,8 @@
     "emoji-picker-react": "^4.7.12",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
