--- a/rhizome-js/package.json
+++ b/rhizome-js/package.json
@@ -19,6 +19,7 @@
     "@tiptap/starter-kit": "^2.2.2",
     "emoji-picker-react": "^4.7.12",
     "prop-types": "^15.8.1",
+    "prosemirror-transform": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "uuid": "^9.0.1"
